# mcp-docs-memory

./: .gitignore  README.md  pyproject.toml  why-docs-memory-beats-pure-karpathy.md
docs/: _config.yml  index.md  robots.txt
src/docs_memory_mcp/: __init__.py  __main__.py  duckdb_store.py  indexer.py  ollama_embed.py  server.py  settings.py  settings_singleton.py  wiki_export.py
tests/: test_duckdb_store.py  test_indexer.py  test_wiki_export.py
