[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docs-memory-mcp"
version = "0.1.0"
description = "MCP server: Ollama embeddings + DuckDB document search and memory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "duckdb>=0.9.0",
    "numpy>=1.21.0",
    "psutil>=5.8.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "pypdf>=5.0.0",
]

[project.scripts]
docs-memory-mcp = "docs_memory_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
